--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,8 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.author %></td>
-        <td>Placeholder</td>
+        <td><%= link_to 'Show', book_path(book) %></td>
+        <td><%= link_to 'Delete', book_path(book), method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
