--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Add a new book</h1>
 
+<% if @book.errors.any? %>
+    <h2>The following errors prevented the book from being saved</h2>
+    <ul>
+        <% @book.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+        <% end %>
+    </ul>
+<% end %>
+
 <%= form_with scope: :book, url: books_path, local: true do |f| %>
     <p>
         <%= f.label :title %><br/>
