--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,8 @@
 
   <body>
    
-    <% flash.each do |name, msg| %>
-      <%= msg %>
-    <% end %>
+   <%= render 'layouts/messages' %>
+   
      <%= yield %>
   </body>
 </html>
