--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-Hello World!
+<h1> Welcome to the home page>
+
+<%= link_to 'Books listing', books_path %> |
+<%= link_to 'About page', about_path %> 
 
