--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Author</th>
-      <th>Actions</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -15,8 +15,13 @@
         <td><%= book.title %></td>
         <td><%= book.author %></td>
         <td><%= link_to 'Show', book_path(book) %></td>
-        <td><%= link_to 'Delete', book_path(book), method: :delete %></td>
+        <td><%= link_to 'Edit', edit_book_path(book) %></td>
+        <td><%= link_to 'Delete', book_path(book), method: :delete, data: { confirm: "Are you sure?" } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<p>
+  <%= link_to 'Add new book', new_book_path %>
+</p>
