--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,24 +1,5 @@
 <h1>Add a new book</h1>
 
-<% if @book.errors.any? %>
-    <h2>The following errors prevented the book from being saved</h2>
-    <ul>
-        <% @book.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
+<%= render 'form' %>
 
-<%= form_with scope: :book, url: books_path, local: true do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%=f.label :author %><br/>
-        <%=f.text_field :author %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-<% end %>
+<%= link_to 'Return to books listing', books_path %>
