--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,3 +3,6 @@
 <p><strong> Title: </strong><%= @book.title %></p>
 <p><strong> Author: </strong><%= @book.author %></p>
 
+<%= link_to 'Edit', edit_book_path(@book) %> |
+<%= link_to 'Delete', book_path(@book), method: :delete, data: { confirm: "Are you sure?" } %> |
+<%= link_to 'Return to books listing', books_path %>
