--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,22 @@
-<h1> Welcome to the home page>
 
-<%= link_to 'Books listing', books_path %> |
-<%= link_to 'About page', about_path %> 
+<div id="page-content">
+    <div class="container" id="home-container">
+        <div class="jumbotron">
+        <h1 class="display-4">Read It!</h1>
+        <hr class="my-4">
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+        </div>
+    </div>
+</div>
+<!-- photo from unsplash - (openbook.jpg) Jonas Jacobsson-->
+
+
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+  <div class="container text-center">
+    <small>Copyright &copy; KJTempas</small>
+  </div>
+</footer>
+
 
