--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,27 +1,31 @@
-<h1>Book listing page</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
+<div id="page-content">
+  <h1 class="text-center mt-4">List of all books</h1>
+  <div class="container">
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
       <tr>
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= link_to 'Show', book_path(book) %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Delete', book_path(book), method: :delete, data: { confirm: "Are you sure?" } %></td>
+        <th>Title</th>
+        <th>Author</th>
+        <th colspan="3">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<p>
-  <%= link_to 'Add new book', new_book_path %>
-</p>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.author %></td>
+
+          <td><%= link_to 'Show', book_path(book), class: "btn btn-warning" %></td>
+          <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
+          <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <p>
+    <%= link_to 'Add new book', new_book_path %>
+  </p>
+</div>
+</div>
