--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,26 +1,36 @@
 
-<% if @book.errors.any? %>
-  <h2>The following errors prevented the book from being saved</h2>
-  <ul>
-    <% @book.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with(model: @book, local: true) do |f| %>
+<div class="container">
+  <% if @book.errors.any? %>
+    <h2>The following errors prevented the book from being saved</h2>
+    <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :title, class: "col-2 col-form-label text-light" %>
+          <div class="col-10">
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :author %><br/>
-    <%= f.text_field :author %>
-  </p>
+        <div class="form-group row">
+          <%= f.label :author, class: "col-2 col-form-label text-light" %>
+          <div class="col-10"> 
+            <%= f.text_field :author, class: "form-control shadow rounded", placeholder: "Author" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+        <div class="form-group row justify-content-center">
+          <%= f.submit class: "btn btn-outline-light btn-lg" %>
+        </div>
+      <% end %>
+    </div>
+    <%= link_to '[ Cancel and return to books list ]', books_path, class: "text-info" %>
+  </div>
+</div> 
