--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit article</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Cancel and return to books listing', books_path %>
+<div id="page-content">
+    <h1 class="text-center mt-4">Edit a book"</h1>
+    <%= render 'form' %>
+</div>
