--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Add a new book</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Return to books listing', books_path %>
+<div id="page-content">
+    <h1 class="text-center mt-4">Add a new book"</h1>
+    <%= render 'form' %>
+</div>
