--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,17 +1,8 @@
-
 <div class="container">
-  <% if @book.errors.any? %>
-    <h2>The following errors prevented the book from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @book, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
         <div class="form-group row">
           <%= f.label :title, class: "col-2 col-form-label text-light" %>
           <div class="col-10">
@@ -33,4 +24,5 @@
     </div>
     <%= link_to '[ Cancel and return to books list ]', books_path, class: "text-info" %>
   </div>
-</div> 
+  </div> 
+</div>
