--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
 <div id="page-content">
-    <h1 class="text-center mt-4">Add a new book"</h1>
+    <h1 class="text-center mt-4">Add a new book</h1>
     <%= render 'form' %>
 </div>
