backend work on adding users

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,11 @@
 
-<div id="page-content">
-    <div class="container" id="home-container">
-        <div class="jumbotron">
-        <h1 class="display-4">Read It!</h1>
-        <hr class="my-4">
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
-        </div>
+  <div class="container" id="home-container">
+
+    <div class="jumbotron text-center text-black">
+      <h1 class="display-4">Read It!</h1>
+      <hr class="my-4">
+      <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
     </div>
-</div>
-<!-- photo from unsplash - (openbook.jpg) Jonas Jacobsson-->
-
-
-<footer id="sticky-footer" class="py-4 bg-dark text-white">
-  <div class="container text-center">
-    <small>Copyright &copy; KJTempas</small>
   </div>
-</footer>
 
 
