--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -6,7 +6,7 @@
         <div class="form-group row">
           <%= f.label :title, class: "col-2 col-form-label text-light" %>
           <div class="col-10">
-            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of book" %>
           </div>
         </div>
 
@@ -22,6 +22,7 @@
         </div>
       <% end %>
     </div>
+    <div class="mb-3">>
     <%= link_to '[ Cancel and return to books list ]', books_path, class: "text-info" %>
   </div>
   </div> 
