--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,3 @@
-<div id="page-content">
   <h1 class="text-center mt-4">List of all books</h1>
   <div class="container">
   <table class="table table-striped table-bordered">
@@ -6,6 +5,7 @@
       <tr>
         <th>Title</th>
         <th>Author</th>
+        <th>User</th>
         <th colspan="3">Actions</th>
       </tr>
     </thead>
@@ -15,7 +15,7 @@
         <tr>
           <td><%= book.title %></td>
           <td><%= book.author %></td>
-
+          <td><%= @book.user.username if book.user %>
           <td><%= link_to 'Show', book_path(book), class: "btn btn-warning" %></td>
           <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
           <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
