--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,25 @@
-<h1> Showing book details</h1>
+<div id="page-content">
+    <h2 class="text-center mt-4"><%= @book.title %></h2>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-8 mt-4">
+                <div class="card text-center shadow mb-5 bg-white rounded">
+                  <div class="card-header font-italic">read by <%= @book.user.username if @book.user %>
+                  </div>
 
-<p><strong> Title: </strong><%= @book.title %></p>
-<p><strong> Author: </strong><%= @book.author %></p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Delete', book_path(@book), method: :delete, data: { confirm: "Are you sure?" } %> |
-<%= link_to 'Return to books listing', books_path %>
+                    <div class="card-body">
+                      <div class="card-text text-left">book by <%= simple_format(@book.author) %></div>
+                        <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-info" %>
+                          <%= link_to "Delete", book_path(@book), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+                        </div>
+                        <div class="card-footer text-muted">
+                          <small>Created <%= time_ago_in_words(@book.created_at) %> ago, 
+                          edited <%= time_ago_in_words(@book.updated_at) %> ago </small>
+                        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+    
+  
