--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -22,7 +22,7 @@
         </div>
       <% end %>
     </div>
-    <div class="mb-3">>
+    <div class="mb-3">
     <%= link_to '[ Cancel and return to books list ]', books_path, class: "text-info" %>
   </div>
   </div> 
