--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -4,7 +4,7 @@
       <tr>
         <th>Title</th>
         <th>Author</th>
-        <th>User</th>
+        <th>Reader</th>
         <th colspan="3">Actions</th>
       </tr>
     </thead>
@@ -14,7 +14,9 @@
         <tr>
           <td><%= book.title %></td>
           <td><%= book.author %></td>
-         
+          <td><% if book.user %>
+            <%= link_to book.user.username, user_path(book.user) %>
+            <% end %>
           <td><%= link_to 'Show', book_path(book), class: "btn btn-warning" %></td>
           <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
           <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
