--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,7 @@
             <div class="col-8 mt-4">
                 <div class="card text-center shadow mb-5 bg-white rounded">
                   <div class="card-header font-italic">read by <%= @book.user.username if @book.user %>
+                  <%= link_to gravatar_for(@book.user), user_path(@book.user) %>
                   </div>
 
                     <div class="card-body">
