add pagination to books list

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
   <h1 class="text-center mt-4">List of all books</h1>
   
+<%= will_paginate @books, :page_links => false %>
+
   <%= render 'book' %>
