--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -14,7 +14,7 @@
         <tr>
           <td><%= user.username %></td>
           <td><%= user.email %></td>
-          <td> Holder </td>
+          <td> <%= user.books.count() %></td>
           </tr>
       <% end %>
     </tbody>
