--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -18,8 +18,9 @@
             <%= link_to book.user.username, user_path(book.user) %>
             <% end %>
           <td><%= link_to 'Show', book_path(book), class: "btn btn-warning" %></td>
-          <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
-          <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
+          <%= if logged_in? && book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
+            <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
         </tr>
       <% end %>
     </tbody>
