--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,8 +10,10 @@
 
                     <div class="card-body">
                       <div class="card-text text-left">book by <%= simple_format(@book.author) %></div>
-                        <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-info" %>
+                        <%= if logged_in? && book.user == current_user %>
+                          <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-info" %>
                           <%= link_to "Delete", book_path(@book), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+                        <% end %>
                         </div>
                         <div class="card-footer text-muted">
                           <small>Created <%= time_ago_in_words(@book.created_at) %> ago, 
