--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -17,10 +17,12 @@
           <td><% if book.user %>
             <%= link_to book.user.username, user_path(book.user) %>
             <% end %>
-          <td><%= link_to 'Show', book_path(book), class: "btn btn-warning" %></td>
-          <%= if logged_in? && book.user == current_user %>
-            <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success" %></td>
-            <td><%= link_to 'Delete', book_path(book), class: "btn btn-info", method: :delete, data: { confirm: "Are you sure?" } %></td>
+            </td>
+          <td><%= link_to 'Show', book_path(book), class: "btn btn-success" %></td>
+          <% if logged_in? && book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success"%></td>
+            <td><%= link_to 'Delete', book_path(book), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %></td>
+            <% end %>
         </tr>
       <% end %>
     </tbody>
@@ -29,5 +31,4 @@
   <p>
     <%= link_to 'Add new book', new_book_path %>
   </p>
-</div>
 </div>
