--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,11 @@
   <h1 class="text-center mt-4">List of all books</h1>
   
-  <div class="apple_pagination">
+  <div class="apple_pagination mb-4">
       <%= will_paginate @books, :container => false %>
   </div>
 
-
   <%= render 'book' %>
+
+  <div class="apple_pagination">
+      <%= will_paginate @books, :container => false %>
+  </div>
