--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,24 +1,28 @@
-<div id="page-content">
-    <h2 class="text-center mt-4"><%= @book.title %></h2>
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="col-8 mt-4">
-                <div class="card text-center shadow mb-5 bg-white rounded">
-                  <div class="card-header font-italic">read by <%= @book.user.username if @book.user %>
-                  <%= link_to gravatar_for(@book.user), user_path(@book.user) %>
-                  </div>
 
-                    <div class="card-body">
-                      <div class="card-text text-left">book by <%= simple_format(@book.author) %></div>
-                        <%= if logged_in? && book.user == current_user %>
-                          <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-info" %>
-                          <%= link_to "Delete", book_path(@book), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
-                        <% end %>
-                        </div>
-                        <div class="card-footer text-muted">
-                          <small>Created <%= time_ago_in_words(@book.created_at) %> ago, 
-                          edited <%= time_ago_in_words(@book.updated_at) %> ago </small>
-                        </div>
+  <h2 class="text-center mt-4"><%= @book.title %></h2>
+
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-8 mt-4">
+        <div class="card text-center shadow mb-5 bg-white rounded">
+          <div class="card-header font-italic">
+          read by <%= @book.user.username if @book.user %>
+            <%= link_to gravatar_for(@book.user), user_path(@book.user) %>
+          </div>
+
+          <div class="card-body">
+            <div class="card-text text-left">book by <%= simple_format(@book.author) %>
+            </div>
+            
+              <% if logged_in? && book.user == current_user %>
+                <%= link_to "Edit", edit_book_path(@book), class: "btn btn-outline-info" %>
+                <%= link_to "Delete", book_path(@book), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+              <% end %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Created <%= time_ago_in_words(@book.created_at) %> ago, 
+              edited <%= time_ago_in_words(@book.updated_at) %> ago </small>
+            </div>
         </div>
       </div>
     </div>
