--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,6 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      
       <li class="nav-item">
         <%= link_to "Read It Users", users_path, class: "nav-link" %>
       </li>
@@ -16,7 +15,9 @@
         </a>
 
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <% if logged_in? %>
           <%= link_to "Create new book", new_book_path, class: "dropdown-item"%>
+        <% end %>
           <%= link_to "View books", books_path, class: "dropdown-item"%>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
@@ -24,8 +25,15 @@
       </li>
       
       <% if logged_in? %>
-        <li class="nav-item">
-          <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Profile [<%= current_user.username %>]
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to "View your profile", user_path(current_user), class: "dropdown-item"%>
+          <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item"%>
+          <% link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+        </div>
         </li>
         <li class="nav-item">
           <%= link_to 'Log out', logout_path, class: "nav-link", method: :delete %>
