--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -20,9 +20,9 @@
             </td>
           <td><%= link_to 'Show', book_path(book), class: "btn btn-success" %></td>
           <% if logged_in? && book.user == current_user %>
-            <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-success"%></td>
+            <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-info"%></td>
             <td><%= link_to 'Delete', book_path(book), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %></td>
-            <% end %>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
