--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,13 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%=link_to "READ IT", root_path, class: "navbar-brand", id: "logo" %>
+  <%= link_to "READ IT", root_path, class: "navbar-brand", id: "logo" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+
       <li class="nav-item">
         <%= link_to "Read It Users", users_path, class: "nav-link" %>
       </li>
@@ -16,7 +18,7 @@
 
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <% if logged_in? %>
-            <%= link_to "Create new book", new_book_path, class: "dropdown-item"%>
+            <%= link_to "Add new book", new_book_path, class: "dropdown-item"%>
           <% end %>
           <%= link_to "View books", books_path, class: "dropdown-item"%>
           <div class="dropdown-divider"></div>
@@ -27,7 +29,7 @@
       <% if logged_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Profile [<%= current_user.username %>]
+            <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to "View your profile", user_path(current_user), class: "dropdown-item"%>
